--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.2.0"
+    "@faker-js/faker": "^8.0.2",
+    "cypress": "^13.2.0",
+    "dotenv": "^16.3.1"
   }
 }
