--- a/package.json
+++ b/package.json
@@ -12,11 +12,6 @@
     "@faker-js/faker": "^8.0.2",
     "cypress": "^13.2.0",
     "cypress-if": "^1.10.5",
-    "dotenv": "^16.3.1",
-    "eslint": "^8.49.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-n": "^16.1.0",
-    "eslint-plugin-promise": "^6.1.1"
+    "dotenv": "^16.3.1"
   }
 }
