--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,11 @@
-name: Cypress Tests using Cypress Docker Image
-
+name: Chrome
 on: push
-
 jobs:
-  cypress-run:
+  chrome:
     runs-on: ubuntu-22.04
-    container:
-      image: cypress/browsers:node18.12.0-chrome106-ff106
-      options: --user 1001
+    name: E2E on Chrome
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
+      - uses: actions/checkout@v4
+      - uses: cypress-io/github-action@v6
         with:
-          build: npm run build
-          start: npm start
           browser: chrome
